--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		"url": "/",
 		"logo": "images/output-onlinepngtools3.png"
 }</script>
-  <meta name="theme-color" content="#f2ede9">
+  <meta name="theme-color" content="#9b886f">
   <meta property="og:title" content="KohenAgency">
   <meta property="og:description" content="">
   <meta property="og:type" content="website">
@@ -30,7 +30,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
 
-<body data-home-page="https://website6561965.nicepage.io/KohenAgency.html?version=4a8293d7-de17-f02f-beb3-7496674357c0"
+<body data-home-page="https://website6561965.nicepage.io/KohenAgency.html?version=feceaf43-4adb-7a01-5801-8d64f1268b73"
   data-home-page-title="KohenAgency" data-path-to-root="./" data-include-products="false"
   class="u-body u-clearfix u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="header">
@@ -267,8 +267,10 @@
       <div class="u-expanded-width u-list u-list-1">
         <div class="u-repeater u-repeater-1">
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-1">
-              <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-image-1"
+            <div
+              class="u-container-layout u-similar-container u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-1">
+              <img alt=""
+                class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-image u-image-contain u-image-default u-image-1"
                 data-image-width="406" data-image-height="164"
                 src="images/Screen_Shot_2025-03-10_at_3.25.26_PM-removebg-preview.png"
                 data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"
@@ -276,8 +278,10 @@
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-2">
-              <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-image-2"
+            <div
+              class="u-container-layout u-similar-container u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-2">
+              <img alt=""
+                class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-image u-image-contain u-image-default u-image-2"
                 data-image-width="792" data-image-height="315"
                 src="images/KakaoTalk_Photo_2025-03-10-15-28-11-removebg-preview.png"
                 data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"
@@ -285,24 +289,30 @@
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3">
-              <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-image-3"
+            <div
+              class="u-container-layout u-similar-container u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-3">
+              <img alt=""
+                class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-image u-image-contain u-image-default u-image-3"
                 data-image-width="2272" data-image-height="966" src="images/output-onlinepngtools8.png"
                 data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"
                 data-animation-out="0">
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-4">
-              <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-image-4"
+            <div
+              class="u-container-layout u-similar-container u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-4">
+              <img alt=""
+                class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-image u-image-contain u-image-default u-image-4"
                 data-image-width="2500" data-image-height="2500" src="images/TonjiLogo.png"
                 data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"
                 data-animation-out="0">
             </div>
           </div>
           <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-5">
-              <img alt="" class="u-expanded-width u-image u-image-contain u-image-default u-image-5"
+            <div
+              class="u-container-layout u-similar-container u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-5">
+              <img alt=""
+                class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-image u-image-contain u-image-default u-image-5"
                 data-image-width="292" data-image-height="106" src="images/Novaris.png"
                 data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"
                 data-animation-out="0">
@@ -424,7 +434,7 @@
                       <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
                         <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-3"
                           data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500"
-                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-5.png"
+                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-7.png"
                               alt=""></span>&nbsp;
                         </h3>
                         <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-4">Educated at the <span
@@ -439,7 +449,7 @@
                       <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
                         <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-5"
                           data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500"
-                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-5.png"
+                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-7.png"
                               alt=""></span>&nbsp;
                         </h3>
                         <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-6"><span
@@ -454,7 +464,7 @@
                       <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
                         <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-7"
                           data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500"
-                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-5.png"
+                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-7.png"
                               alt=""></span>&nbsp;<br>
                         </h3>
                         <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-8">Trusted by <span
@@ -469,7 +479,7 @@
                       <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
                         <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-9"
                           data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500"
-                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-5.png"
+                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-7.png"
                               alt=""></span>&nbsp;
                         </h3>
                         <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-10"><span
