--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
 
-<body data-home-page="https://website6561965.nicepage.io/KohenAgency.html?version=99443a84-ae57-b92e-e20f-550b69ab95d3"
+<body data-home-page="https://website6561965.nicepage.io/KohenAgency.html?version=7ea6826f-712a-dd7f-ff9a-4f5e3f6c6da1"
   data-home-page-title="KohenAgency" data-path-to-root="./" data-include-products="false"
   class="u-body u-clearfix u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en">
   <header class="u-clearfix u-header u-header" id="header">
@@ -144,7 +144,8 @@
       </p>
     </div>
   </section>
-  <section class="u-align-center u-clearfix u-container-align-center u-gradient u-section-2" id="carousel_8ab9">
+  <section class="u-align-center u-clearfix u-container-align-center u-gradient u-valign-middle-xs u-section-2"
+    id="carousel_8ab9">
     <h2 class="u-align-center u-custom-font u-text u-text-body-alt-color u-text-1"
       data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"
       data-animation-out="0"><span style="font-weight: 700;"></span><span style="font-weight: 700;">Kohen Agency</span>
@@ -509,8 +510,7 @@
                 <div
                   class="u-align-left u-container-align-left u-container-align-left-lg u-container-align-left-md u-container-align-left-sm u-container-align-left-xl u-container-style u-hover-feature u-layout-cell u-shading u-size-20 u-layout-cell-2"
                   data-image-width="1024" data-image-height="1536">
-                  <div
-                    class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-2">
+                  <div class="u-container-layout u-valign-middle u-container-layout-2">
                     <h6 class="u-align-left u-custom-font u-hover-feature u-text u-text-body-alt-color u-text-2"> Which
                       markets should we enter first and why?</h6>
                   </div>
@@ -538,7 +538,7 @@
                 <div
                   class="u-align-left u-container-align-left u-container-align-left-lg u-container-align-left-md u-container-align-left-xl u-container-style u-hover-feature u-layout-cell u-shading u-size-20 u-layout-cell-6">
                   <div
-                    class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-top-sm u-valign-top-xs u-container-layout-6">
+                    class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-middle-xs u-valign-top-sm u-container-layout-6">
                     <h6
                       class="u-align-left u-custom-font u-hover-feature u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-xl u-text-4">
                       What type of content should we be creating to attract ideal clients or customers?</h6>
@@ -630,7 +630,7 @@
                       <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
                         <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-5"
                           data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500"
-                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-9.png"
+                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-11.png"
                               alt=""></span>&nbsp;
                         </h3>
                         <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-6"><span
@@ -645,7 +645,7 @@
                       <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
                         <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-7"
                           data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500"
-                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-9.png"
+                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-11.png"
                               alt=""></span>&nbsp;<br>
                         </h3>
                         <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-8">Trusted by <span
@@ -660,7 +660,7 @@
                       <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
                         <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-9"
                           data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500"
-                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-9.png"
+                          data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-11.png"
                               alt=""></span>&nbsp;
                         </h3>
                         <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-10"><span
@@ -740,14 +740,13 @@
 
 
   <footer
-    class="u-align-center u-black u-clearfix u-container-align-center u-container-align-center-lg u-container-align-center-xl u-footer u-footer"
+    class="u-align-center u-black u-clearfix u-container-align-center u-container-align-center-lg u-container-align-center-md u-container-align-center-sm u-container-align-center-xl u-footer u-footer"
     id="footer">
     <div class="u-clearfix u-sheet u-sheet-1">
       <img class="u-expanded-width-xs u-image u-image-contain u-image-default u-image-1"
         src="images/Kohen_Agency_White.png" alt="" data-image-width="1240" data-image-height="654">
       <a href="Consultation"
         class="u-border-2 u-border-white u-btn u-btn-round u-button-style u-custom-font u-hover-white u-radius u-text-black u-text-hover-black u-white u-btn-1"
-        data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"
         data-animation-out="0">WORK WITH US</a>
       <p class="u-align-left u-custom-font u-text u-text-default u-text-1"><span style="font-weight: 700;"> CONTACT
           US</span><span style="font-style: normal;">
