--- a/Contact.html
+++ b/Contact.html
@@ -141,9 +141,7 @@
           <br>Montreal - Seoul - Paris - CDMX
         </p>
         <p class="u-align-left u-custom-font u-text u-text-2"><span style="font-weight: 700;"><span style="font-weight: 700;">Follow </span>us</span>
-          <br>Linkedin<br>Instagram<br>Youtube
-        </p>
-        <p class="u-align-right u-custom-font u-text u-text-default u-text-3">Home&nbsp;<br>Services&nbsp;<br>about us&nbsp;<br>clients&nbsp;<br>insights&nbsp;<br>why kohen&nbsp;<br>contact
+          <br>Linkedin<br>Instagram<br>
         </p>
       </div></footer>
   
