--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="https://website6561965.nicepage.io/KohenAgency.html?version=06a8a89b-7b72-0dfe-55fa-78c8380f0e6a" data-home-page-title="KohenAgency" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="https://website6561965.nicepage.io/KohenAgency.html?version=ed9fc70e-c040-fb3c-16ce-83ad717b2a18" data-home-page-title="KohenAgency" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="1240" data-image-height="654">
           <img src="images/Kohen_Agency_White.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -83,12 +83,12 @@
         </nav>
         <a href="https://calendly.com/kohenagency/30min" class="u-border-2 u-border-white u-btn u-btn-round u-button-style u-custom-font u-font-open-sans u-hidden-md u-hidden-sm u-hidden-xs u-hover-white u-none u-radius u-text-hover-black u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0" title="Contact">WORK WITH US</a>
       </div></header>
-    <section class="skrollable u-align-center u-clearfix u-container-align-center u-image u-shading u-section-1" id="carousel_6f19" data-image-width="1020" data-image-height="1365">
+    <section class="skrollable u-align-center u-clearfix u-image u-shading u-section-1" id="carousel_6f19" data-image-width="1020" data-image-height="1365">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-border-1 u-border-white u-line u-line-vertical u-line-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"></div>
-        <p class="u-align-right u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0"><span style="font-weight: 400;">TOGHETHER WE GRO​W WHAT YOU </span>IMAGINE
+        <p class="u-align-right u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0"><span style="font-weight: 400;">TOGETHER WE GRO​W WHAT YOU </span>IMAGINE
         </p>
-        <p class="u-align-left u-custom-font u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">Smarter Strategies.&nbsp;<br>Bolder Brands.&nbsp;<br>Global Reach.
+        <p class="u-align-left u-custom-font u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0">Smarter Strategies.&nbsp;<br>Bolder Brands.&nbsp;<br>Globa​l Reach.
         </p>
       </div>
     </section>
@@ -106,9 +106,9 @@
 </g>
 </g></svg></span>
             </a>
-            <div class="u-accordion-active u-accordion-pane u-align-left u-container-align-left-lg u-container-align-left-md u-container-align-left-sm u-container-align-left-xl u-container-style u-shape-rectangle u-accordion-pane-1" id="accordion-7c0e" aria-labelledby="link-accordion-7c0e" role="tabpanel">
+            <div class="u-accordion-active u-accordion-pane u-align-left u-container-align-left u-container-align-left-lg u-container-align-left-md u-container-align-left-sm u-container-align-left-xl u-container-style u-shape-rectangle u-accordion-pane-1" id="accordion-7c0e" aria-labelledby="link-accordion-7c0e" role="tabpanel">
               <div class="u-container-layout u-valign-top-lg u-container-layout-1">
-                <p class="u-custom-font u-text u-text-body-alt-color u-text-2"><span style="font-weight: 700;"></span>Wh​ether early-stage or established, your company needs guidance on process optimization, growth strategies, and strategic planning for long-term success.<span style="font-weight: 700;"></span>
+                <p class="u-custom-font u-text u-text-body-alt-color u-text-2"><span style="font-weight: 700;"></span>Wh​ether early-stage or established, your company needs guidance on process optimization, growth strategies, AI integration, and strategic planning for long-term success.<span style="font-weight: 700;"></span>
                   <br>
                 </p>
                 <h2 class="u-custom-font u-subtitle u-text u-text-custom-color-2 u-text-3"> Drive Success with Sm<span style="font-weight: 700;"></span>art Str​ategies
@@ -154,7 +154,7 @@
 </g>
 </g></svg></span>
             </a>
-            <div class="u-accordion-pane u-align-left u-container-align-left-lg u-container-align-left-md u-container-align-left-sm u-container-align-left-xl u-container-style u-shape-rectangle u-accordion-pane-2" id="accordion-05cb" aria-labelledby="link-accordion-05cb" role="tabpanel">
+            <div class="u-accordion-pane u-align-left u-container-align-left u-container-align-left-lg u-container-align-left-md u-container-align-left-sm u-container-align-left-xl u-container-style u-shape-rectangle u-accordion-pane-2" id="accordion-05cb" aria-labelledby="link-accordion-05cb" role="tabpanel">
               <div class="u-container-layout u-container-layout-6">
                 <h2 class="u-custom-font u-subtitle u-text u-text-body-alt-color u-text-16"> Make Your Brand Unforgettable</h2>
                 <p class="u-custom-font u-text u-text-body-alt-color u-text-17"><span style="font-weight: 700;"></span>Your company wants to elevate its brand presence, refine brand identity, and engage target audiences through digital marketing, content creation, and tailored strategies.<br>
@@ -200,7 +200,7 @@
 </g>
 </g></svg></span>
             </a>
-            <div class="u-accordion-pane u-align-left u-container-align-left-lg u-container-align-left-md u-container-align-left-sm u-container-align-left-xl u-container-style u-shape-rectangle u-accordion-pane-3" id="accordion-a6bb" aria-labelledby="link-accordion-a6bb" role="tabpanel">
+            <div class="u-accordion-pane u-align-left u-container-align-left u-container-align-left-lg u-container-align-left-md u-container-align-left-sm u-container-align-left-xl u-container-style u-shape-rectangle u-accordion-pane-3" id="accordion-a6bb" aria-labelledby="link-accordion-a6bb" role="tabpanel">
               <div class="u-container-layout u-container-layout-11">
                 <h2 class="u-custom-font u-subtitle u-text u-text-body-alt-color u-text-30"> Expand Beyond Borders</h2>
                 <p class="u-custom-font u-text u-text-body-alt-color u-text-31"><span style="font-weight: 700;"></span>Your company aims to expand into new markets or internationally and needs tailored strategies for market entry, localization, and navigating cultural differences.<br>
@@ -218,7 +218,7 @@
                       <div class="u-container-layout u-similar-container u-valign-top u-container-layout-13">
                         <h6 class="u-custom-font u-font-playfair-display u-text u-text-color-var u-text-default u-text-35">02</h6>
                         <h6 class="u-custom-font u-text u-text-body-alt-color u-text-36"> Global Networking &amp; Partnerships</h6>
-                        <h5 class="u-custom-font u-text u-text-body-alt-color u-text-37"> We identify potential strategic partners and facilitate connections internationally,</h5>
+                        <h5 class="u-custom-font u-text u-text-body-alt-color u-text-37"> We identify potential strategic partners and facilitate connections internationally.</h5>
                       </div>
                     </div>
                     <div class="u-container-style u-list-item u-repeater-item">
@@ -379,13 +379,13 @@
                         <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
                           <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-3" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-1"><img src="images/1633830.png" alt=""></span>&nbsp;
                           </h3>
-                          <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-4">Educated at the <span style="font-weight: 700;">World’s Leading Universities</span>
+                          <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-4"> Trusted by <span style="font-weight: 700;">Fortune 500s &amp; Global ORGANIZATIONS</span>
                           </h6>
                         </div>
                       </div>
                       <div class="u-align-center u-container-align-center u-container-style u-list-item u-opacity u-opacity-20 u-repeater-item u-shape-rectangle u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0" data-animation-out="0">
                         <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
-                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-5" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-12.png" alt=""></span>&nbsp;
+                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-5" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-2"><img src="images/1633830-5.png" alt=""></span>&nbsp;
                           </h3>
                           <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-6"><span style="font-weight: 700;">One-Stop Solution</span> for All Things Business
                           </h6>
@@ -393,15 +393,15 @@
                       </div>
                       <div class="u-align-center u-container-align-center u-container-style u-list-item u-opacity u-opacity-20 u-repeater-item u-shape-rectangle u-list-item-3" data-animation-direction="Up" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0" data-animation-out="0">
                         <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
-                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-7" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-12.png" alt=""></span>&nbsp;<br>
+                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-7" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-3"><img src="images/1633830-5.png" alt=""></span>&nbsp;<br>
                           </h3>
-                          <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-8">Trusted by <span style="font-weight: 700;">Fortune 500s &amp; Global Institutions</span>
+                          <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-8">Educated at the <span style="font-weight: 700;">World’s Leading institutions</span>
                           </h6>
                         </div>
                       </div>
                       <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-4" data-animation-direction="Up" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0" data-animation-out="0">
                         <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
-                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-9" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon"><img src="images/1633830-12.png" alt=""></span>&nbsp;
+                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-9" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-4"><img src="images/1633830-5.png" alt=""></span>&nbsp;
                           </h3>
                           <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-10"><span style="font-weight: 700;"> Cross-Cultural</span> Expertise <span style="font-weight: 700;">&amp; Global</span> Experience<br>
                           </h6>
@@ -426,21 +426,21 @@
               <div class="u-container-layout u-similar-container u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/59149-b29d83ff.png" alt=""></span>
                 <p class="u-align-left u-custom-font u-text u-text-default u-text-2" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0"> Kohen Agency was a game-changer for our new brand. From social media to launch strategy and business planning, everything was tailored to help us attract the right audience—and it worked!</p>
                 <h6 class="u-align-left u-text u-text-body-alt-color u-text-3"> -<br>Cariño
-                </h6>
+                </h6><span class="u-file-icon u-flip-horizontal u-flip-vertical u-icon u-icon-2"><img src="images/59149-b29d83ff.png" alt=""></span>
               </div>
             </div>
             <div class="u-border-2 u-border-black u-container-style u-list-item u-radius u-repeater-item u-shape-round u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0">
-              <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/59149-b29d83ff.png" alt=""></span>
-                <p class="u-align-left u-custom-font u-text u-text-default u-text-4" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0"> Rebeka helped us refine our brand identity and expand our client base through strategic business development and branding. Her support has been invaluable for our growth.</p>
+              <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-file-icon u-icon u-icon-3"><img src="images/59149-b29d83ff.png" alt=""></span>
+                <p class="u-align-left u-custom-font u-text u-text-default u-text-4" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0"> Rebeka and her team helped us refine our brand identity and expand our client base through strategic business development and branding. Her support has been invaluable for our growth.</p>
                 <h6 class="u-align-left u-text u-text-body-alt-color u-text-5">-<br>Indigo Consulting
-                </h6>
+                </h6><span class="u-file-icon u-flip-horizontal u-flip-vertical u-icon u-icon-4"><img src="images/59149-b29d83ff.png" alt=""></span>
               </div>
             </div>
             <div class="u-border-2 u-border-black u-container-style u-list-item u-radius u-repeater-item u-shape-round u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0">
-              <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/59149-b29d83ff.png" alt=""></span>
+              <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-file-icon u-icon u-icon-5"><img src="images/59149-b29d83ff.png" alt=""></span>
                 <p class="u-align-left u-custom-font u-text u-text-default u-text-6" data-animation-name="fadeIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0"> The in-depth brand audit from Kohen Agency gave us fresh insights that helped refine our messaging and connect better with our audience, driving growth and more clarity.</p>
                 <h6 class="u-align-left u-text u-text-body-alt-color u-text-7">-<br>Atelier Okoumé
-                </h6>
+                </h6><span class="u-file-icon u-flip-horizontal u-flip-vertical u-icon u-icon-6"><img src="images/59149-b29d83ff.png" alt=""></span>
               </div>
             </div>
           </div>
@@ -460,9 +460,7 @@
           <br>Montreal - Seoul - Paris - CDMX
         </p>
         <p class="u-align-left u-custom-font u-text u-text-2"><span style="font-weight: 700;"><span style="font-weight: 700;">Follow </span>us</span>
-          <br>Linkedin<br>Instagram<br>Youtube
-        </p>
-        <p class="u-align-right u-custom-font u-text u-text-default u-text-3">Home&nbsp;<br>Services&nbsp;<br>about us&nbsp;<br>clients&nbsp;<br>insights&nbsp;<br>why kohen&nbsp;<br>contact
+          <br>Linkedin<br>Instagram<br>
         </p>
       </div></footer>
   
