--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="https://website6561965.nicepage.io/KohenAgency.html?version=ed9fc70e-c040-fb3c-16ce-83ad717b2a18" data-home-page-title="KohenAgency" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="https://website6561965.nicepage.io/KohenAgency.html?version=3090b2a8-ab93-454a-08af-5820cf479870" data-home-page-title="KohenAgency" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-overlap u-overlap-contrast u-overlap-transparent u-xl-mode" data-lang="en"><header class="u-clearfix u-custom-color-1 u-header u-header" id="header"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" data-image-width="1240" data-image-height="654">
           <img src="images/Kohen_Agency_White.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -83,7 +83,7 @@
         </nav>
         <a href="https://calendly.com/kohenagency/30min" class="u-border-2 u-border-white u-btn u-btn-round u-button-style u-custom-font u-font-open-sans u-hidden-md u-hidden-sm u-hidden-xs u-hover-white u-none u-radius u-text-hover-black u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0" title="Contact">WORK WITH US</a>
       </div></header>
-    <section class="skrollable u-align-center u-clearfix u-image u-shading u-section-1" id="carousel_6f19" data-image-width="1020" data-image-height="1365">
+    <section class="skrollable u-align-center u-clearfix u-container-align-center-lg u-container-align-center-md u-container-align-center-sm u-container-align-center-xl u-image u-shading u-section-1" id="carousel_6f19" data-image-width="1020" data-image-height="1365">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-border-1 u-border-white u-line u-line-vertical u-line-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0"></div>
         <p class="u-align-right u-custom-font u-text u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-delay="0" data-animation-out="0"><span style="font-weight: 400;">TOGETHER WE GRO​W WHAT YOU </span>IMAGINE
@@ -385,7 +385,7 @@
                       </div>
                       <div class="u-align-center u-container-align-center u-container-style u-list-item u-opacity u-opacity-20 u-repeater-item u-shape-rectangle u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0" data-animation-out="0">
                         <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
-                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-5" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-2"><img src="images/1633830-5.png" alt=""></span>&nbsp;
+                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-5" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-2"><img src="images/1633830-9.png" alt=""></span>&nbsp;
                           </h3>
                           <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-6"><span style="font-weight: 700;">One-Stop Solution</span> for All Things Business
                           </h6>
@@ -393,7 +393,7 @@
                       </div>
                       <div class="u-align-center u-container-align-center u-container-style u-list-item u-opacity u-opacity-20 u-repeater-item u-shape-rectangle u-list-item-3" data-animation-direction="Up" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0" data-animation-out="0">
                         <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-5">
-                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-7" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-3"><img src="images/1633830-5.png" alt=""></span>&nbsp;<br>
+                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-7" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-3"><img src="images/1633830-9.png" alt=""></span>&nbsp;<br>
                           </h3>
                           <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-8">Educated at the <span style="font-weight: 700;">World’s Leading institutions</span>
                           </h6>
@@ -401,7 +401,7 @@
                       </div>
                       <div class="u-align-center u-container-align-center u-container-style u-list-item u-repeater-item u-shape-rectangle u-list-item-4" data-animation-direction="Up" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0" data-animation-out="0">
                         <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-6">
-                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-9" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-4"><img src="images/1633830-5.png" alt=""></span>&nbsp;
+                          <h3 class="u-align-center u-custom-font u-font-merriweather u-text u-text-9" data-animation-name="counter" data-animation-event="scroll" data-animation-duration="2500" data-animation-delay="0"><span class="u-file-icon u-icon u-icon-4"><img src="images/1633830-9.png" alt=""></span>&nbsp;
                           </h3>
                           <h6 class="u-align-center u-custom-font u-text u-text-body-color u-text-10"><span style="font-weight: 700;"> Cross-Cultural</span> Expertise <span style="font-weight: 700;">&amp; Global</span> Experience<br>
                           </h6>
